--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -32,5 +32,6 @@ traitPoints=../lotro-data/characters/traitPoints.xml
 warbands=../lotro-data/warbands/warbands.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
+nonImbuedLegacies=../lotro-data/legendary/non_imbued_legacies.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
