Added a passives manager with associated XML I/O

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -33,5 +33,6 @@ warbands=../lotro-data/warbands/warbands.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
 nonImbuedLegacies=../lotro-data/legendary/non_imbued_legacies.xml
+passives=../lotro-data/legendary/passives.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
