Added a writer for quest files

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -25,6 +25,7 @@ deeds=../lotro-deeds-db/deeds.xml
 emotes=../lotro-data/emotes/emotes.xml
 factions=../lotro-data/common/factions.xml
 items=../lotro-items-db/items.xml
+quests=../lotro-data/quests/quests.xml
 maps=../lotro-maps-db
 recipes=../lotro-data/recipes/recipes.xml
 titles=../lotro-data/titles/titles.xml
