Added a datafile for consumables

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -35,5 +35,6 @@ warbands=../lotro-data/warbands/warbands.xml
 legacies=../lotro-data/legendary/legacies.xml
 nonImbuedLegacies=../lotro-data/legendary/non_imbued_legacies.xml
 passives=../lotro-data/legendary/passives.xml
+consumables=../lotro-data/items/consumables.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
