Change default location of the deeds database

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -21,7 +21,7 @@ statContribs=../lotro-data/characters/statContribs.xml
 races=../lotro-data/characters/races.xml
 
 # Databases
-deeds=../lotro-deeds-db/deeds.xml
+deeds=../lotro-data/deeds/deeds.xml
 emotes=../lotro-data/emotes/emotes.xml
 factions=../lotro-data/common/factions.xml
 items=../lotro-items-db/items.xml
