Added support for skills (POJO, XML I/O, manager)

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -15,6 +15,7 @@ colors=../lotro-data/common/colors.xml
 
 # Characters
 traits=../lotro-data/traits/traits.xml
+skills=../lotro-data/skills/skills.xml
 classes=../lotro-data/characters/classes.xml
 startStats=../lotro-data/characters/startStats.xml
 statContribs=../lotro-data/characters/statContribs.xml
