--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -27,6 +27,7 @@ deeds=../lotro-data/deeds/deeds.xml
 emotes=../lotro-data/emotes/emotes.xml
 factions=../lotro-data/common/factions.xml
 items=../lotro-items-db/items.xml
+sets=../lotro-data/items/sets.xml
 quests=../lotro-data/quests/quests.xml
 maps=../lotro-maps-db
 recipes=../lotro-data/recipes/recipes.xml
