Added a file for non-imbued default legacies

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -36,6 +36,7 @@ traitPoints=../lotro-data/characters/traitPoints.xml
 warbands=../lotro-data/warbands/warbands.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
+defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
 nonImbuedLegacies=../lotro-data/legendary/non_imbued_legacies.xml
 passives=../lotro-data/legendary/passives.xml
 passivesUsage=../lotro-data/legendary/passivesUsage.xml
