Added an XML writer for data of the legendary system

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -40,6 +40,7 @@ defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
 nonImbuedLegacies=../lotro-data/legendary/non_imbued_legacies.xml
 passives=../lotro-data/legendary/passives.xml
 passivesUsage=../lotro-data/legendary/passivesUsage.xml
+legendaryData=../lotro-data/legendary/legendarySystem.xml
 consumables=../lotro-data/items/consumables.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
