--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -22,6 +22,9 @@ startStats=../lotro-data/characters/startStats.xml
 statContribs=../lotro-data/characters/statContribs.xml
 races=../lotro-data/characters/races.xml
 
+# Combat
+combatData=../lotro-data/common/combat.xml
+
 # Databases
 deeds=../lotro-data/deeds/deeds.xml
 emotes=../lotro-data/emotes/emotes.xml
