Major revamp of crafting data (now uses XML for definitions)

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -25,6 +25,9 @@ races=../lotro-data/characters/races.xml
 # Combat
 combatData=../lotro-data/common/combat.xml
 
+# Crafting
+craftingData=../lotro-data/crafting/crafting.xml
+
 # Databases
 deeds=../lotro-data/deeds/deeds.xml
 emotes=../lotro-data/emotes/emotes.xml
