Added support for buffs based on an effect (e.g IDOME)

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -21,6 +21,7 @@ classes=../lotro-data/characters/classes.xml
 startStats=../lotro-data/characters/startStats.xml
 statContribs=../lotro-data/characters/statContribs.xml
 races=../lotro-data/characters/races.xml
+buffs=../lotro-data/effects/buffs.xml
 
 # Combat
 combatData=../lotro-data/common/combat.xml
