Added support for mounts (POJO, XML I/O, data file and basic filters)

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -41,6 +41,7 @@ recipes=../lotro-data/recipes/recipes.xml
 titles=../lotro-data/titles/titles.xml
 traitPoints=../lotro-data/characters/traitPoints.xml
 warbands=../lotro-data/warbands/warbands.xml
+mounts=../lotro-data/mounts/mounts.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
 defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
