Added XML I/O for cosmetic pets

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -42,6 +42,7 @@ titles=../lotro-data/titles/titles.xml
 traitPoints=../lotro-data/characters/traitPoints.xml
 warbands=../lotro-data/warbands/warbands.xml
 mounts=../lotro-data/mounts/mounts.xml
+pets=../lotro-data/pets/pets.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
 defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
