Added XML persistence for barter tables

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -43,6 +43,7 @@ traitPoints=../lotro-data/characters/traitPoints.xml
 warbands=../lotro-data/warbands/warbands.xml
 mounts=../lotro-data/mounts/mounts.xml
 pets=../lotro-data/pets/pets.xml
+barters=../lotro-data/trade/barters.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
 defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
