--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -44,6 +44,7 @@ warbands=../lotro-data/warbands/warbands.xml
 mounts=../lotro-data/mounts/mounts.xml
 pets=../lotro-data/pets/pets.xml
 barters=../lotro-data/trade/barters.xml
+vendors=../lotro-data/trade/vendors.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
 defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
