Added manager and XML I/O for value tables

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -35,6 +35,7 @@ emotes=../lotro-data/emotes/emotes.xml
 factions=../lotro-data/common/factions.xml
 items=../lotro-items-db/items.xml
 sets=../lotro-data/items/sets.xml
+valueTables=../lotro-data/items/valueTables.xml
 quests=../lotro-data/quests/quests.xml
 maps=../lotro-maps-db
 recipes=../lotro-data/recipes/recipes.xml
