--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -46,6 +46,7 @@ mounts=../lotro-data/mounts/mounts.xml
 pets=../lotro-data/pets/pets.xml
 barters=../lotro-data/trade/barters.xml
 vendors=../lotro-data/trade/vendors.xml
+loots=../lotro-data/loots/loots.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
 defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
