Added XML I/O for containers

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -47,6 +47,7 @@ pets=../lotro-data/pets/pets.xml
 barters=../lotro-data/trade/barters.xml
 vendors=../lotro-data/trade/vendors.xml
 loots=../lotro-data/loots/loots.xml
+containers=../lotro-data/items/containers.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
 defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
