--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -48,6 +48,7 @@ barters=../lotro-data/trade/barters.xml
 vendors=../lotro-data/trade/vendors.xml
 loots=../lotro-data/loots/loots.xml
 containers=../lotro-data/items/containers.xml
+disenchantments=../lotro-data/items/disenchantments.xml
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
 defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
