Major refactoring of the stat tomes support

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -15,6 +15,7 @@ colors=../lotro-data/common/colors.xml
 
 # Characters
 traits=../lotro-data/traits/traits.xml
+statTomes=../lotro-data/traits/statTomes.xml
 virtues=../lotro-data/virtues/virtues.xml
 skills=../lotro-data/skills/skills.xml
 classes=../lotro-data/characters/classes.xml
