Added server descriptions (name, IP address)

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -7,6 +7,7 @@ root=../lotro-companion
 # Configuration
 parameters=../lotro-companion/data/config/params.txt
 servers=../lotro-companion/data/config/servers.txt
+serversDescription=../lotro-data/servers/servers.xml
 
 # Basics
 progressions=../lotro-data/common/progressions.xml
