Added an XML writer for geographic areas

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -61,3 +61,6 @@ legendaryData=../lotro-data/legendary/legendarySystem.xml
 consumables=../lotro-data/items/consumables.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
+
+# Maps
+geoAreas=../lotro-data/maps/geoAreas.xml
