Added parchment maps POJO and XML I/O

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -64,3 +64,4 @@ relics=../lotro-relics/relics.xml
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
+parchmentMaps=../lotro-data/maps/parchmentMaps.xml
