--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -65,3 +65,4 @@ relics=../lotro-relics/relics.xml
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
 parchmentMaps=../lotro-data/maps/parchmentMaps.xml
+dungeons=../lotro-data/maps/dungeons.xml
