Added XML I/O for private encounters

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -61,6 +61,7 @@ legendaryData=../lotro-data/legendary/legendarySystem.xml
 consumables=../lotro-data/items/consumables.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
+privateEncounters=../lotro-data/instances/privateEncounters.xml
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
