--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -68,3 +68,4 @@ mobs=../lotro-data/agents/mobs.xml
 geoAreas=../lotro-data/maps/geoAreas.xml
 parchmentMaps=../lotro-data/maps/parchmentMaps.xml
 dungeons=../lotro-data/maps/dungeons.xml
+resourcesMaps=../lotro-data/maps/resources.xml
