Added XML I/O for the instances tree

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -62,6 +62,7 @@ consumables=../lotro-data/items/consumables.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
 privateEncounters=../lotro-data/instances/privateEncounters.xml
+instancesTree=../lotro-data/instances/instancesTree.xml
 mobs=../lotro-data/agents/mobs.xml
 
 # Maps
