Added POJOs and XML I/O for paper items

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -37,6 +37,7 @@ emotes=../lotro-data/emotes/emotes.xml
 factions=../lotro-data/common/factions.xml
 items=../lotro-items-db/items.xml
 sets=../lotro-data/items/sets.xml
+paperItems=../lotro-data/items/paperItems.xml
 valueTables=../lotro-data/items/valueTables.xml
 quests=../lotro-data/quests/quests.xml
 maps=../lotro-maps-db
