--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -40,6 +40,7 @@ sets=../lotro-data/items/sets.xml
 paperItems=../lotro-data/items/paperItems.xml
 valueTables=../lotro-data/items/valueTables.xml
 quests=../lotro-data/quests/quests.xml
+tasks=../lotro-data/quests/tasks.xml
 maps=../lotro-maps-db
 recipes=../lotro-data/recipes/recipes.xml
 titles=../lotro-data/titles/titles.xml
