--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -63,6 +63,7 @@ legendaryData=../lotro-data/legendary/legendarySystem.xml
 consumables=../lotro-data/items/consumables.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
+relicMeldingRecipes=../lotro-data/relics/meldingRecipes.xml
 privateEncounters=../lotro-data/instances/privateEncounters.xml
 instancesTree=../lotro-data/instances/instancesTree.xml
 mobs=../lotro-data/agents/mobs.xml
