Added a POJO and XML I/O for difficulties

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -13,6 +13,7 @@ serversDescription=../lotro-data/servers/servers.xml
 progressions=../lotro-data/common/progressions.xml
 stats=../lotro-data/common/stats.xml
 colors=../lotro-data/common/colors.xml
+difficulties=../lotro-data/common/difficulties.xml
 
 # Characters
 traits=../lotro-data/traits/traits.xml
