Use GroupSize POJO in skirmish stats instead of enum SkirmishGroupSize

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -14,6 +14,7 @@ progressions=../lotro-data/common/progressions.xml
 stats=../lotro-data/common/stats.xml
 colors=../lotro-data/common/colors.xml
 difficulties=../lotro-data/common/difficulties.xml
+groupSizes=../lotro-data/common/groupSizes.xml
 
 # Characters
 traits=../lotro-data/traits/traits.xml
