Added POJOs and XML I/O for instance loots

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -68,6 +68,7 @@ relics=../lotro-relics/relics.xml
 relicMeldingRecipes=../lotro-data/relics/meldingRecipes.xml
 privateEncounters=../lotro-data/instances/privateEncounters.xml
 instancesTree=../lotro-data/instances/instancesTree.xml
+instanceLoots=../lotro-data/instances/instanceLoots.xml
 mobs=../lotro-data/agents/mobs.xml
 
 # Maps
