Flush works on generic mob loots

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -69,6 +69,7 @@ privateEncounters=../lotro-data/instances/privateEncounters.xml
 instancesTree=../lotro-data/instances/instancesTree.xml
 instanceLoots=../lotro-data/instances/instanceLoots.xml
 mobs=../lotro-data/agents/mobs.xml
+genericMobLoots=../lotro-data/agents/mobLoots.xml
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
