--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -61,10 +61,12 @@ nonImbuedLegacies=../lotro-data/legendary/non_imbued_legacies.xml
 passives=../lotro-data/legendary/passives.xml
 passivesUsage=../lotro-data/legendary/passivesUsage.xml
 legendaryData=../lotro-data/legendary/legendarySystem.xml
-consumables=../lotro-data/items/consumables.xml
+legendaryAttrs=../lotro-data/legendary/legendaryAttributes.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
 relicMeldingRecipes=../lotro-data/relics/meldingRecipes.xml
+
+consumables=../lotro-data/items/consumables.xml
 privateEncounters=../lotro-data/instances/privateEncounters.xml
 instancesTree=../lotro-data/instances/instancesTree.xml
 instanceLoots=../lotro-data/instances/instanceLoots.xml
