--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -62,6 +62,7 @@ passives=../lotro-data/legendary/passives.xml
 passivesUsage=../lotro-data/legendary/passivesUsage.xml
 legendaryData=../lotro-data/legendary/legendarySystem.xml
 legendaryAttrs=../lotro-data/legendary/legendaryAttributes.xml
+legendaryData2=../lotro-data/legendary/legendarySystem2.xml
 traceries=../lotro-data/legendary/traceries.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
