Added POJOs and XML I/O for enhancement runes

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -64,6 +64,7 @@ legendaryData=../lotro-data/legendary/legendarySystem.xml
 legendaryAttrs=../lotro-data/legendary/legendaryAttributes.xml
 legendaryData2=../lotro-data/legendary/legendarySystem2.xml
 traceries=../lotro-data/legendary/traceries.xml
+enhancementRunes=../lotro-data/legendary/enhancementRunes.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-relics/relics.xml
 relicMeldingRecipes=../lotro-data/relics/meldingRecipes.xml
