Added POJOs and XML I/O for allegiances

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -47,6 +47,7 @@ recipes=../lotro-data/recipes/recipes.xml
 titles=../lotro-data/titles/titles.xml
 traitPoints=../lotro-data/characters/traitPoints.xml
 warbands=../lotro-data/warbands/warbands.xml
+allegiances=../lotro-data/allegiances/allegiances.xml
 mounts=../lotro-data/mounts/mounts.xml
 pets=../lotro-data/pets/pets.xml
 barters=../lotro-data/trade/barters.xml
