Moved here the code for landblocks (from lotro-tools)

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -82,3 +82,4 @@ geoAreas=../lotro-data/maps/geoAreas.xml
 parchmentMaps=../lotro-data/maps/parchmentMaps.xml
 dungeons=../lotro-data/maps/dungeons.xml
 resourcesMaps=../lotro-data/maps/resources.xml
+landblocks=../lotro-data/maps/landblocks.xml
