--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -37,6 +37,7 @@ deeds=../lotro-data/deeds/deeds.xml
 emotes=../lotro-data/emotes/emotes.xml
 factions=../lotro-data/common/factions.xml
 items=../lotro-items-db/items.xml
+itemCosmetics=../lotro-data/items/cosmetics.xml
 sets=../lotro-data/items/sets.xml
 paperItems=../lotro-data/items/paperItems.xml
 valueTables=../lotro-data/items/valueTables.xml
