--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -77,6 +77,7 @@ instancesTree=../lotro-data/instances/instancesTree.xml
 instanceLoots=../lotro-data/instances/instanceLoots.xml
 mobs=../lotro-data/agents/mobs.xml
 genericMobLoots=../lotro-data/agents/mobLoots.xml
+billingGroups=../lotro-data/misc/billingGroups.xml
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
