Some more work on world events

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -78,6 +78,7 @@ instanceLoots=../lotro-data/instances/instanceLoots.xml
 mobs=../lotro-data/agents/mobs.xml
 genericMobLoots=../lotro-data/agents/mobLoots.xml
 billingGroups=../lotro-data/misc/billingGroups.xml
+worldEvents=../lotro-data/misc/worldEvents.xml
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
