--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -79,6 +79,7 @@ mobs=../lotro-data/agents/mobs.xml
 genericMobLoots=../lotro-data/agents/mobLoots.xml
 billingGroups=../lotro-data/misc/billingGroups.xml
 worldEvents=../lotro-data/misc/worldEvents.xml
+webStoreItems=../lotro-data/misc/webStoreItems.xml
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
