--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -24,6 +24,7 @@ classes=../lotro-data/characters/classes.xml
 startStats=../lotro-data/characters/startStats.xml
 statContribs=../lotro-data/characters/statContribs.xml
 races=../lotro-data/characters/races.xml
+nationalities=../lotro-data/characters/nationalities.xml
 buffs=../lotro-data/effects/buffs.xml
 
 # Combat
