Added POJOs and XML I/O for collections

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -50,6 +50,7 @@ titles=../lotro-data/titles/titles.xml
 traitPoints=../lotro-data/characters/traitPoints.xml
 warbands=../lotro-data/warbands/warbands.xml
 allegiances=../lotro-data/allegiances/allegiances.xml
+collections=../lotro-data/collections/collections.xml
 mounts=../lotro-data/mounts/mounts.xml
 pets=../lotro-data/pets/pets.xml
 barters=../lotro-data/trade/barters.xml
