Complements/bug fixes for rewards tracks

--- a/src/main/java/delta/games/lotro/config/locations.properties
+++ b/src/main/java/delta/games/lotro/config/locations.properties
@@ -82,6 +82,7 @@ genericMobLoots=../lotro-data/agents/mobLoots.xml
 billingGroups=../lotro-data/misc/billingGroups.xml
 worldEvents=../lotro-data/misc/worldEvents.xml
 webStoreItems=../lotro-data/misc/webStoreItems.xml
+rewardsTracks=../lotro-data/misc/rewardsTracks.xml
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
