--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,18 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>delta-lotro-core</artifactId>
   <packaging>jar</packaging>
-  <version>19.2</version>
+  <version>20.0-SNAPSHOT</version>
   <name>lotro-core</name>
   <parent>
     <groupId>com.dam.delta4j</groupId>
     <artifactId>maven-definitions</artifactId>
-    <version>1.1</version>
+    <version>2.0</version>
   </parent>
   <dependencies>
     <dependency>
       <groupId>com.dam.delta4j</groupId>
       <artifactId>delta-common</artifactId>
-      <version>1.6.9</version>
+      <version>1.7.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
