--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>delta-lotro-core</artifactId>
   <packaging>jar</packaging>
-  <version>20.0</version>
+  <version>20.1-SNAPSHOT</version>
   <name>lotro-core</name>
   <parent>
     <groupId>com.dam.delta4j</groupId>
