--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>delta-lotro-core</artifactId>
   <packaging>jar</packaging>
-  <version>20.1</version>
+  <version>21.0-SNAPSHOT</version>
   <name>lotro-core</name>
   <parent>
     <groupId>com.dam.delta4j</groupId>
@@ -14,7 +14,7 @@
     <dependency>
       <groupId>com.dam.delta4j</groupId>
       <artifactId>delta-common</artifactId>
-      <version>1.7.0</version>
+      <version>1.7.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
