--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
       <artifactId>delta-common</artifactId>
       <version>1.7.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.dam.delta4j</groupId>
+      <artifactId>delta-common-l10n</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
