Added XML I/O for hobby descriptions

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -83,6 +83,7 @@ billingGroups=../lotro-data/misc/billingGroups.xml
 worldEvents=../lotro-data/misc/worldEvents.xml
 webStoreItems=../lotro-data/misc/webStoreItems.xml
 rewardsTracks=../lotro-data/misc/rewardsTracks.xml
+hobbies=../lotro-data/hobbies/hobbies.xml
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
