Moved trait trees to a dedicated XML file

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -21,6 +21,7 @@ statTomes=../lotro-data/traits/statTomes.xml
 virtues=../lotro-data/virtues/virtues.xml
 skills=../lotro-data/skills/skills.xml
 classes=../lotro-data/characters/classes.xml
+traitTrees=../lotro-data/characters/traitTrees.xml
 startStats=../lotro-data/characters/startStats.xml
 statContribs=../lotro-data/characters/statContribs.xml
 races=../lotro-data/characters/races.xml
