Added a POJO and XML I/O for the skirmish traits directory

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -17,6 +17,7 @@ enumsDir=../lotro-data/common/enums
 
 # Characters
 traits=../lotro-data/traits/traits.xml
+skirmishTraits=../lotro-data/traits/skirmishTraits.xml
 statTomes=../lotro-data/traits/statTomes.xml
 virtues=../lotro-data/virtues/virtues.xml
 skills=../lotro-data/skills/skills.xml
