--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -72,7 +72,7 @@ legendaryData2=../lotro-data/legendary/legendarySystem2.xml
 traceries=../lotro-data/legendary/traceries.xml
 enhancementRunes=../lotro-data/legendary/enhancementRunes.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
-relics=../lotro-relics/relics.xml
+relics=../lotro-data/relics/relics.xml
 relicMeldingRecipes=../lotro-data/relics/meldingRecipes.xml
 
 consumables=../lotro-data/items/consumables.xml
