Adapt to several modes (live and SoA book 11)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -17,10 +17,12 @@ enumsDir=../lotro-data/common/enums
 
 # Characters
 traits=../lotro-data/traits/traits.xml
+traitIcons=../lotro-icons/traits
 skirmishTraits=../lotro-data/traits/skirmishTraits.xml
 statTomes=../lotro-data/traits/statTomes.xml
 virtues=../lotro-data/virtues/virtues.xml
 skills=../lotro-data/skills/skills.xml
+skillIcons=../lotro-icons/skills
 classes=../lotro-data/characters/classes.xml
 traitTrees=../lotro-data/characters/traitTrees.xml
 startStats=../lotro-data/characters/startStats.xml
@@ -28,6 +30,7 @@ statContribs=../lotro-data/characters/statContribs.xml
 races=../lotro-data/characters/races.xml
 nationalities=../lotro-data/characters/nationalities.xml
 buffs=../lotro-data/effects/buffs.xml
+effectIcons=../lotro-data/effects/effectIcons.zip
 
 # Combat
 combatData=../lotro-data/common/combat.xml
@@ -38,8 +41,11 @@ craftingData=../lotro-data/crafting/crafting.xml
 # Databases
 deeds=../lotro-data/deeds/deeds.xml
 emotes=../lotro-data/emotes/emotes.xml
+emoteIcons=../lotro-icons/emotes
 factions=../lotro-data/common/factions.xml
 items=../lotro-items-db/items.xml
+itemIcons=../lotro-icons/items
+largeItemicons=../lotro-icons/largeItems
 itemCosmetics=../lotro-data/items/cosmetics.xml
 sets=../lotro-data/items/sets.xml
 paperItems=../lotro-data/items/paperItems.xml
@@ -49,9 +55,11 @@ tasks=../lotro-data/quests/tasks.xml
 maps=../lotro-maps-db
 recipes=../lotro-data/recipes/recipes.xml
 titles=../lotro-data/titles/titles.xml
+titleIcons=../lotro-data/titles/titleIcons.zip
 traitPoints=../lotro-data/characters/traitPoints.xml
 warbands=../lotro-data/warbands/warbands.xml
 allegiances=../lotro-data/allegiances/allegiances.xml
+allegianceIcons=../lotro-data/allegiances/allegianceIcons.zip
 collections=../lotro-data/collections/collections.xml
 mounts=../lotro-data/mounts/mounts.xml
 pets=../lotro-data/pets/pets.xml
@@ -60,8 +68,10 @@ vendors=../lotro-data/trade/vendors.xml
 loots=../lotro-data/loots/loots.xml
 containers=../lotro-data/items/containers.xml
 disenchantments=../lotro-data/items/disenchantments.xml
+miscIcons=../lotro-data/misc/miscIcons.zip
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
+legaciesIcons=../lotro-data/legendary/legaciesIcons.zip
 defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
 nonImbuedLegacies=../lotro-data/legendary/non_imbued_legacies.xml
 passives=../lotro-data/legendary/passives.xml
@@ -73,6 +83,7 @@ traceries=../lotro-data/legendary/traceries.xml
 enhancementRunes=../lotro-data/legendary/enhancementRunes.xml
 legendaryTitles=../lotro-data/legendary/legendary_titles.xml
 relics=../lotro-data/relics/relics.xml
+relicIcons=../lotro-icons/relics
 relicMeldingRecipes=../lotro-data/relics/meldingRecipes.xml
 
 consumables=../lotro-data/items/consumables.xml
@@ -86,9 +97,11 @@ worldEvents=../lotro-data/misc/worldEvents.xml
 webStoreItems=../lotro-data/misc/webStoreItems.xml
 rewardsTracks=../lotro-data/misc/rewardsTracks.xml
 hobbies=../lotro-data/hobbies/hobbies.xml
+hobbyIcons=../lotro-data/hobbies/hobbyIcons.zip
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
+areaIcons=../lotro-data/maps/areaIcons.zip
 parchmentMaps=../lotro-data/maps/parchmentMaps.xml
 dungeons=../lotro-data/maps/dungeons.xml
 resourcesMaps=../lotro-data/maps/resources.xml
