Use a different user data directory for each mode

--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -3,6 +3,9 @@
 
 root=../data_soa
 
+# User data
+dataDir=${user.home}/.lotrocompanion_soa
+
 # Configuration
 parameters=data/config/params.txt
 servers=data/config/servers.txt
