--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -4,6 +4,9 @@
 
 root=../lotro-companion
 
+# User data
+dataDir=${user.home}/.lotrocompanion
+
 # Configuration
 parameters=../lotro-companion/data/config/params.txt
 servers=../lotro-companion/data/config/servers.txt
