Fixed the root directory for legacy data

--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -1,7 +1,7 @@
 # Runtime locations
 # Paths are relative to the current working directory of the application
 
-root=../data_soa
+root=../lotro-data-legacy
 
 # User data
 dataDir=${user.home}/.lotrocompanion_soa
