Fixed the key of large item icons

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -45,7 +45,7 @@ emoteIcons=../lotro-icons/emotes
 factions=../lotro-data/common/factions.xml
 items=../lotro-items-db/items.xml
 itemIcons=../lotro-icons/items
-largeItemicons=../lotro-icons/largeItems
+largeItemIcons=../lotro-icons/largeItems
 itemCosmetics=../lotro-data/items/cosmetics.xml
 sets=../lotro-data/items/sets.xml
 paperItems=../lotro-data/items/paperItems.xml
