--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -14,6 +14,7 @@ progressions=../lotro-data/common/progressions.xml
 stats=../lotro-data/common/stats.xml
 colors=../lotro-data/common/colors.xml
 enumsDir=../lotro-data/common/enums
+labelsDir=../lotro-data/labels
 
 # Characters
 traits=../lotro-data/traits/traits.xml
