Move initial gear data to a separate manager

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -26,6 +26,7 @@ skills=../lotro-data/skills/skills.xml
 skillIcons=../lotro-icons/skills
 classes=../lotro-data/characters/classes.xml
 traitTrees=../lotro-data/characters/traitTrees.xml
+initialGear=../lotro-data/characters/initialGear.xml
 startStats=../lotro-data/characters/startStats.xml
 statContribs=../lotro-data/characters/statContribs.xml
 races=../lotro-data/characters/races.xml
