Added minimal support for monster classes

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -25,6 +25,8 @@ virtues=../lotro-data/virtues/virtues.xml
 skills=../lotro-data/skills/skills.xml
 skillIcons=../lotro-icons/skills
 classes=../lotro-data/characters/classes.xml
+monsterClasses=../lotro-data/monsters/classes.xml
+classIcons=../lotro-icons/classes
 traitTrees=../lotro-data/characters/traitTrees.xml
 initialGear=../lotro-data/characters/initialGear.xml
 startStats=../lotro-data/characters/startStats.xml
