--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -23,6 +23,7 @@ virtues=data/lore/virtues.xml
 skills=data/lore/skills.xml
 skillIcons=icons/skills
 classes=data/lore/classes.xml
+classIcons=icons/classes
 traitTrees=data/lore/traitTrees.xml
 startStats=data/lore/startStats.xml
 statContribs=data/lore/statContribs.xml
