Location for race icons (issue #377)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -32,6 +32,7 @@ initialGear=../lotro-data/characters/initialGear.xml
 startStats=../lotro-data/characters/startStats.xml
 statContribs=../lotro-data/characters/statContribs.xml
 races=../lotro-data/characters/races.xml
+raceIcons=../lotro-icons/races
 nationalities=../lotro-data/characters/nationalities.xml
 buffs=../lotro-data/effects/buffs.xml
 effectIcons=../lotro-data/effects/effectIcons.zip
