--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -28,6 +28,7 @@ traitTrees=data/lore/traitTrees.xml
 startStats=data/lore/startStats.xml
 statContribs=data/lore/statContribs.xml
 races=data/lore/races.xml
+raceIcons=icons/races
 nationalities=data/lore/nationalities.xml
 buffs=data/lore/buffs.xml
 effectIcons=lib/effectIcons.zip
