Added a manager and associated XML I/O for NPCs (issue #373)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -95,6 +95,7 @@ instancesTree=../lotro-data/instances/instancesTree.xml
 instanceLoots=../lotro-data/instances/instanceLoots.xml
 mobs=../lotro-data/agents/mobs.xml
 genericMobLoots=../lotro-data/agents/mobLoots.xml
+NPCs=../lotro-data/agents/NPCs.xml
 billingGroups=../lotro-data/misc/billingGroups.xml
 worldEvents=../lotro-data/misc/worldEvents.xml
 webStoreItems=../lotro-data/misc/webStoreItems.xml
