Generic item effects (issues LotroCompanion/lotro-companion#494)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -52,6 +52,7 @@ items=../lotro-items-db/items.xml
 itemIcons=../lotro-icons/items
 largeItemIcons=../lotro-icons/largeItems
 itemCosmetics=../lotro-data/items/cosmetics.xml
+genericItemEffects=../lotro-data/items/genericItemEffects.xml
 sets=../lotro-data/items/sets.xml
 paperItems=../lotro-data/items/paperItems.xml
 valueTables=../lotro-data/items/valueTables.xml
