Landmarks database (issue LotroCompanion/lotro-companion#517)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -109,5 +109,6 @@ geoAreas=../lotro-data/maps/geoAreas.xml
 areaIcons=../lotro-data/maps/areaIcons.zip
 parchmentMaps=../lotro-data/maps/parchmentMaps.xml
 dungeons=../lotro-data/maps/dungeons.xml
+landmarks=../lotro-data/maps/landmarks.xml
 resourcesMaps=../lotro-data/maps/resources.xml
 landblocks=../lotro-data/maps/landblocks.xml
