--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -13,6 +13,7 @@ progressions=data/lore/progressions.xml
 stats=data/lore/stats.xml
 colors=data/lore/colors.xml
 enumsDir=data/lore/enums
+labelsDir=data/lore/labels
 
 # Characters
 traits=data/lore/traits.xml
@@ -23,8 +24,10 @@ virtues=data/lore/virtues.xml
 skills=data/lore/skills.xml
 skillIcons=icons/skills
 classes=data/lore/classes.xml
+monsterClasses=data/lore/monsterClasses.xml
 classIcons=icons/classes
 traitTrees=data/lore/traitTrees.xml
+initialGear=data/lore/initialGear.xml
 startStats=data/lore/startStats.xml
 statContribs=data/lore/statContribs.xml
 races=data/lore/races.xml
@@ -48,6 +51,7 @@ items=data/lore/items.xml
 itemIcons=icons/items
 largeItemIcons=icons/largeItems
 itemCosmetics=data/lore/cosmetics.xml
+genericItemEffects=data/lore/genericItemEffects.xml
 sets=data/lore/sets.xml
 paperItems=data/lore/paperItems.xml
 valueTables=data/lore/valueTables.xml
@@ -62,8 +66,6 @@ warbands=data/lore/warbands.xml
 allegiances=data/lore/allegiances.xml
 allegianceIcons=lib/allegianceIcons.zip
 collections=data/lore/collections.xml
-mounts=data/lore/mounts.xml
-pets=data/lore/pets.xml
 barters=data/lore/barters.xml
 vendors=data/lore/vendors.xml
 loots=data/lore/loots.xml
@@ -93,6 +95,7 @@ instancesTree=data/lore/instancesTree.xml
 instanceLoots=data/lore/instanceLoots.xml
 mobs=data/lore/mobs.xml
 genericMobLoots=data/lore/mobLoots.xml
+NPCs=data/lore/NPCs.xml
 billingGroups=data/lore/billingGroups.xml
 worldEvents=data/lore/worldEvents.xml
 webStoreItems=data/lore/webStoreItems.xml
@@ -105,5 +108,6 @@ geoAreas=data/lore/geoAreas.xml
 areaIcons=lib/areaIcons.zip
 parchmentMaps=data/lore/parchmentMaps.xml
 dungeons=data/lore/dungeons.xml
+landmarks=data/lore/landmarks.xml
 resourcesMaps=data/lore/resources.xml
 landblocks=data/lore/landblocks.xml
