Added DPS tables (issue LotroCompanion/lotro-companion#526)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -56,6 +56,7 @@ genericItemEffects=../lotro-data/items/genericItemEffects.xml
 sets=../lotro-data/items/sets.xml
 paperItems=../lotro-data/items/paperItems.xml
 valueTables=../lotro-data/items/valueTables.xml
+dpsTables=../lotro-data/items/dpsTables.xml
 quests=../lotro-data/quests/quests.xml
 tasks=../lotro-data/quests/tasks.xml
 maps=../lotro-maps-db
