--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -55,6 +55,7 @@ genericItemEffects=data/lore/genericItemEffects.xml
 sets=data/lore/sets.xml
 paperItems=data/lore/paperItems.xml
 valueTables=data/lore/valueTables.xml
+dpsTables=data/lore/dpsTables.xml
 quests=data/lore/quests.xml
 tasks=data/lore/tasks.xml
 maps=data/lore/maps
