Added XML I/O for weapon speeds

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -57,6 +57,7 @@ sets=../lotro-data/items/sets.xml
 paperItems=../lotro-data/items/paperItems.xml
 valueTables=../lotro-data/items/valueTables.xml
 dpsTables=../lotro-data/items/dpsTables.xml
+speedTables=../lotro-data/items/speedTables.xml
 quests=../lotro-data/quests/quests.xml
 tasks=../lotro-data/quests/tasks.xml
 maps=../lotro-maps-db
