--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -56,6 +56,7 @@ sets=data/lore/sets.xml
 paperItems=data/lore/paperItems.xml
 valueTables=data/lore/valueTables.xml
 dpsTables=data/lore/dpsTables.xml
+speedTables=data/lore/speedTables.xml
 quests=data/lore/quests.xml
 tasks=data/lore/tasks.xml
 maps=data/lore/maps
