Added POJOs and XML I/O for weapon damage variance (issue LotroCompanion/lotro-companion#539)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -58,6 +58,7 @@ paperItems=../lotro-data/items/paperItems.xml
 valueTables=../lotro-data/items/valueTables.xml
 dpsTables=../lotro-data/items/dpsTables.xml
 speedTables=../lotro-data/items/speedTables.xml
+weaponDamage=../lotro-data/items/weaponDamage.xml
 quests=../lotro-data/quests/quests.xml
 tasks=../lotro-data/quests/tasks.xml
 maps=../lotro-maps-db
