Added support for effect requirements (issue LotroCompanion/lotro-companion#540)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -35,6 +35,7 @@ races=../lotro-data/characters/races.xml
 raceIcons=../lotro-icons/races
 nationalities=../lotro-data/characters/nationalities.xml
 buffs=../lotro-data/effects/buffs.xml
+effects=../lotro-data/effects/effects.xml
 effectIcons=../lotro-data/effects/effectIcons.zip
 
 # Combat
