--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -34,6 +34,7 @@ races=data/lore/races.xml
 raceIcons=icons/races
 nationalities=data/lore/nationalities.xml
 buffs=data/lore/buffs.xml
+effects=data/lore/effects.xml
 effectIcons=lib/effectIcons.zip
 
 # Combat
