--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -54,6 +54,7 @@ itemIcons=../lotro-icons/items
 largeItemIcons=../lotro-icons/largeItems
 itemCosmetics=../lotro-data/items/cosmetics.xml
 genericItemEffects=../lotro-data/items/genericItemEffects.xml
+essences=../lotro-data/items/essences.xml
 sets=../lotro-data/items/sets.xml
 paperItems=../lotro-data/items/paperItems.xml
 valueTables=../lotro-data/items/valueTables.xml
