Added a directory for socket icons

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -52,6 +52,7 @@ factions=../lotro-data/common/factions.xml
 items=../lotro-items-db/items.xml
 itemIcons=../lotro-icons/items
 largeItemIcons=../lotro-icons/largeItems
+socketIcons=../lotro-icons/sockets
 itemCosmetics=../lotro-data/items/cosmetics.xml
 genericItemEffects=../lotro-data/items/genericItemEffects.xml
 sets=../lotro-data/items/sets.xml
