Added missing directory location for SoA

--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -51,6 +51,7 @@ factions=data/lore/factions.xml
 items=data/lore/items.xml
 itemIcons=icons/items
 largeItemIcons=icons/largeItems
+socketIcons=icons/sockets
 itemCosmetics=data/lore/cosmetics.xml
 genericItemEffects=data/lore/genericItemEffects.xml
 sets=data/lore/sets.xml
