--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -36,6 +36,7 @@ raceIcons=../lotro-icons/races
 nationalities=../lotro-data/characters/nationalities.xml
 buffs=../lotro-data/effects/buffs.xml
 effects=../lotro-data/effects/effects.xml
+effects2=../lotro-data/effects/effects2.xml
 effectIcons=../lotro-data/effects/effectIcons.zip
 
 # Combat
