--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -36,6 +36,7 @@ nationalities=data/lore/nationalities.xml
 buffs=data/lore/buffs.xml
 effects=data/lore/effects.xml
 effectIcons=lib/effectIcons.zip
+effectIconsDir=icons/effects
 
 # Combat
 combatData=data/lore/combat.xml
