Updated the icons locations

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -67,21 +67,21 @@ tasks=../lotro-data/quests/tasks.xml
 maps=../lotro-maps-db
 recipes=../lotro-data/recipes/recipes.xml
 titles=../lotro-data/titles/titles.xml
-titleIcons=../lotro-data/titles/titleIcons.zip
+titleIcons=../lotro-icons/titles
 traitPoints=../lotro-data/characters/traitPoints.xml
 warbands=../lotro-data/warbands/warbands.xml
 allegiances=../lotro-data/allegiances/allegiances.xml
-allegianceIcons=../lotro-data/allegiances/allegianceIcons.zip
+allegianceIcons=../lotro-icons/allegiances
 collections=../lotro-data/collections/collections.xml
 barters=../lotro-data/trade/barters.xml
 vendors=../lotro-data/trade/vendors.xml
 loots=../lotro-data/loots/loots.xml
 containers=../lotro-data/items/containers.xml
 disenchantments=../lotro-data/items/disenchantments.xml
-miscIcons=../lotro-data/misc/miscIcons.zip
+miscIcons=../lotro-icons/misc
 # - legendary stuff
 legacies=../lotro-data/legendary/legacies.xml
-legaciesIcons=../lotro-data/legendary/legaciesIcons.zip
+legaciesIcons=../lotro-icons/legacies
 defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
 nonImbuedLegacies=../lotro-data/legendary/non_imbued_legacies.xml
 passives=../lotro-data/legendary/passives.xml
@@ -108,11 +108,11 @@ worldEvents=../lotro-data/misc/worldEvents.xml
 webStoreItems=../lotro-data/misc/webStoreItems.xml
 rewardsTracks=../lotro-data/misc/rewardsTracks.xml
 hobbies=../lotro-data/hobbies/hobbies.xml
-hobbyIcons=../lotro-data/hobbies/hobbyIcons.zip
+hobbyIcons=../lotro-icons/hobbies
 
 # Maps
 geoAreas=../lotro-data/maps/geoAreas.xml
-areaIcons=../lotro-data/maps/areaIcons.zip
+areaIcons=../lotro-icons/areas
 parchmentMaps=../lotro-data/maps/parchmentMaps.xml
 dungeons=../lotro-data/maps/dungeons.xml
 landmarks=../lotro-data/maps/landmarks.xml
