--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -66,21 +66,21 @@ tasks=data/lore/tasks.xml
 maps=data/lore/maps
 recipes=data/lore/recipes.xml
 titles=data/lore/titles.xml
-titleIcons=lib/titleIcons.zip
+titleIcons=icons/titles
 traitPoints=data/lore/traitPoints.xml
 warbands=data/lore/warbands.xml
 allegiances=data/lore/allegiances.xml
-allegianceIcons=lib/allegianceIcons.zip
+allegianceIcons=icons/allegiances
 collections=data/lore/collections.xml
 barters=data/lore/barters.xml
 vendors=data/lore/vendors.xml
 loots=data/lore/loots.xml
 containers=data/lore/containers.xml
 disenchantments=data/lore/disenchantments.xml
-miscIcons=lib/miscIcons.zip
+miscIcons=icons/misc
 # - legendary stuff
 legacies=data/lore/legacies.xml
-legaciesIcons=lib/legaciesIcons.zip
+legaciesIcons=icons/legacies
 defaultNonImbuedLegacies=data/lore/defaultNonImbuedLegacies.xml
 nonImbuedLegacies=data/lore/non_imbued_legacies.xml
 passives=data/lore/passives.xml
@@ -107,11 +107,11 @@ worldEvents=data/lore/worldEvents.xml
 webStoreItems=data/lore/webStoreItems.xml
 rewardsTracks=data/lore/rewardsTracks.xml
 hobbies=data/lore/hobbies.xml
-hobbyIcons=lib/hobbyIcons.zip
+hobbyIcons=icons/hobbies
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
-areaIcons=lib/areaIcons.zip
+areaIcons=icons/areas
 parchmentMaps=data/lore/parchmentMaps.xml
 dungeons=data/lore/dungeons.xml
 landmarks=data/lore/landmarks.xml
